Update backend API URL to production server in configuration files

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 # Backend API Configuration
 # URL del servidor backend donde se ejecutan los cálculos de métricas
-VITE_API_BASE_URL=http://localhost:8001
+VITE_API_BASE_URL=http://3.148.102.253:8001
 
 # AI Agent Configuration
 # Webhook para análisis inteligente de métricas (calificación)
